Removed Java 1.5 method call